k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-example
  namespace: staging
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32700
  selector:
    app: flask-example
